Small fix for VaadinTunes theme (table header labels wrapped).
svn changeset:7887/svn branch:6.0

--- a/WebContent/VAADIN/themes/vaadintunes/styles.css
+++ b/WebContent/VAADIN/themes/vaadintunes/styles.css
@@ -269,7 +269,6 @@
 }
 
 .tTunes .v-table-cell-content {
-	padding: 0 0 0 3px;
 	line-height: normal;
 }
 
